# finanzbericht_ehrenamt

./: .gitignore  LICENSE  Makefile  README.md  RELEASE.md  automated_json_test.py  build.py  build_optimized.py  ci_build.py  clean_build.py  clean_build_new.py  cleanup_build.py  clear_build.py  complete_roundtrip_test.py  create_anonymous_test_data.py  debug_bwa.py  demo_bwa_export.json  demonstrate_bwa_charts.py  final_bwa_test.py  finale_bwa_demonstration.py  import_bwa_groups.py  main.py  manual_json_roundtrip_test.py  pyproject.toml  setup.py  setup_test_settings.py  simple_roundtrip_test.py  test_compact_window.py  test_complete_persistence.py  test_csv_import.py  test_pdf_with_mappings.py  test_persistence.py  test_real_csv.py  test_responsive_layout.py  test_window_geometry.py  update_super_group_mappings.py
src/: __init__.py  main_window.py
test/: __init__.py  ci_test_runner.py  demo_obergruppen.py  fast_test_runner.py  run_all_tests.py  test_account_names.py  test_account_page.py  test_all_sachkonten_outliers.py  test_application_startup.py  test_balance.py  test_balance_migration.py  test_bar_chart_functionality.py  test_blau_color.json  test_blue_headers.json  test_bwa.json  test_bwa_groups_csv.py  test_bwa_gruppen_chart.py  test_bwa_import_export.py  test_bwa_pdf_generation.py  test_chart_spacing.py  test_color_integration.py  test_color_settings_ui.py  test_cover_page_demo.py  test_cover_page_generation.py  test_csv_format.py  test_csv_processor_edge_cases.py  test_custom_green_color.json  test_custom_red_color.json  test_detailed_bwa.py  test_dialogs.py  test_file_handler_errors.py  test_footer_functionality.py  test_gelb_color.json  test_grün_color.json  test_helpers.py  test_icon_display.py  test_improved_table.py  test_integration.py  test_json_export.py  test_json_mappings.py  (+28 more)
(+26 files in other folders)
